# insight

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.json  generate_dashboard.py  get_data.py  pyproject.toml  run.sh
.github/workflows/: build.yml  test.yml
.skill/: develop-command.md
config/: gitcode.json.example
doc/: development.md  issue_stats_notes.md  pr_stats_notes.md  release.md  user_guide.md
doc/gitcode_api/: download_statistics.md  forks.md  issue_api.md  languages.md  pulls_list.md  subscribers.md
src/gitcode_insight/: __init__.py  cli.py  community.py  dashboard.py  issue.py  languages.py  pr.py  repo_stats.py  report.py  subscribers.py  utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_community.py  test_dashboard.py  test_issue.py  test_pr.py  test_repo_stats.py  test_report.py  test_subscribers.py  test_utils.py
