[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitcode-insight"
version = "0.1.0"
description = "GitCode 平台代码洞察工具"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    {name = "GitCode Insight Team"}
]
keywords = ["gitcode", "insight", "analytics", "dashboard"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
gc-insight = "gitcode_insight.cli:main"

[project.urls]
Homepage = "https://gitcode.com/gitcode-cli/insight"
Repository = "https://gitcode.com/gitcode-cli/insight"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests that require real API access (deselect with '-m \"not integration\"')",
]